Added refined content to start page and updated h4 css

--- a/css/main.css
+++ b/css/main.css
@@ -21,6 +21,11 @@ h3 {
     font-weight: 625;
 }
 
+h4 {
+    font-size: 1.3rem;
+    font-weight: 625;
+}
+
 h5 {
     font-size: 1rem;
     font-weight: 400;
