--- a/_layouts/contact_sidebar.html
+++ b/_layouts/contact_sidebar.html
@@ -4,6 +4,8 @@ layout: default
 
 <h1>Austin Animal Center Foster Care Application</h1>
 
+<!-- Add progress bar -->
+
 <div class="row">
   <div class="col-md-8">
     {{ content }}
