--- a/css/main.css
+++ b/css/main.css
@@ -40,6 +40,10 @@ label {
     margin-top: 1rem;
 }
 
+span {
+    display: inline-block
+}
+
 .form-group, .form-check, h1, h2, h3, h4, h5, li, span, small {
     max-width: 545px;
 }
