--- a/css/main.css
+++ b/css/main.css
@@ -14,6 +14,7 @@ h1 {
 
 h2 {
     font-weight: 700;
+    margin-top: 1.5rem;
 }
 
 h3 {
@@ -55,4 +56,13 @@ span {
     padding-left: 30px;
     padding-bottom: 20px;
     padding-right: 30px;
+}
+
+.progress {
+    height: 1.2rem;
+}
+
+.progress-bar {
+    border-right-style: solid;
+    border-right-color: white;
 }
