--- a/css/main.css
+++ b/css/main.css
@@ -31,11 +31,12 @@ h4 {
 h5 {
     font-size: 1rem;
     font-weight: 400;
-    margin-top: 1.5rem;
+    margin-top: 2rem;
 }
 
 .btn {
     margin-top: 20px;
+    margin-bottom: 20px;
 }
 
 label {
@@ -48,6 +49,11 @@ span {
 
 .form-group, .form-check, h1, h2, h3, h4, h5, p, li, span, small {
     max-width: 545px;
+}
+
+.form-group {
+    margin-bottom: 20px;
+    margin-top: 20px;
 }
 
 .animal-info {
