--- a/css/main.css
+++ b/css/main.css
@@ -30,7 +30,7 @@ h4 {
 
 h5 {
     font-size: 1rem;
-    font-weight: 400;
+    font-weight: 500;
     margin-top: 2rem;
 }
 
@@ -44,7 +44,12 @@ label {
 }
 
 span {
-    display: inline-block
+    display: inline-block;
+}
+
+.small, small {
+    font-size: 90%;
+    font-weight: 400;
 }
 
 .form-group, .form-check, h1, h2, h3, h4, h5, p, li, span, small {
