add some conditionals with jquery

--- a/_includes/add_explanation.html
+++ b/_includes/add_explanation.html
@@ -1,5 +1,8 @@
-<a class="btn btn-primary" href="#" role="button">+</a>
-<span>Add an explanation</span>
-<small id="add_explanationHelpInline" class="text-muted">
+<div class="js-add-explanation">
+  <span class="btn btn-sm btn-outline-primary js-add-explanation-trigger" role="button">+</span>
+  <span>Add an explanation</span>
+  <small id="add_explanationHelpInline" class="text-muted">
     Optional
-</small>
+  </small>
+  <textarea class="d-none js-explanation-field form-control" name="name" rows="8" cols="80"></textarea>
+</div>
