--- a/_includes/add_explanation.html
+++ b/_includes/add_explanation.html
@@ -1,8 +1,8 @@
 <div class="js-add-explanation">
   <span class="btn btn-sm btn-outline-primary js-add-explanation-trigger" role="button">+</span>
-  <span>Add an explanation</span>
+  <span>Add additional information</span>
   <small id="add_explanationHelpInline" class="text-muted">
     Optional
   </small>
-  <textarea class="d-none js-explanation-field form-control" name="name" rows="8" cols="80"></textarea>
+  <textarea class="d-none js-explanation-field form-control" name="name" rows="3" cols="80"></textarea>
 </div>
