--- a/css/main.scss
+++ b/css/main.scss
@@ -1,3 +1,8 @@
+---
+# Entry Point Sass file for project. More Sass files may be added to _sass/
+# More info: http://markdotto.com/2014/09/25/sass-and-jekyll/
+---
+
 html, body {
     font-family: "Open Sans", sans-serif, "Montserrat", "Helvetica Neue", "Helvetica", "Roboto", "Arial", sans-serif;
 }
@@ -64,6 +69,9 @@ span {
     padding-bottom: 20px;
     padding-right: 30px;
     margin: 10px 0;
+    .close {
+      margin: 5px -20px;
+    }
 }
 
 .progress {
