Remove helper conditional text and add form-group wrappers

--- a/_includes/add_cat_info_form.html
+++ b/_includes/add_cat_info_form.html
@@ -2,7 +2,7 @@
 {% raw %}
 
 <script id="add-cat-template" type="text/x-handlebars-template">
-  <div class="animal-info js-have-cat-followup js-add-cat-form-block js-animal-info">
+  <div class="animal-info js-have-cat-followup js-add-cat-form-block js-animal-info form-group">
     <button type="button" class="close js-close-animal-info" aria-label="Close">
       <span aria-hidden="true">&times;</span>
     </button>
