--- a/_includes/add_dog_info_form.html
+++ b/_includes/add_dog_info_form.html
@@ -1,7 +1,7 @@
 <!-- These raw tags are to prevent Jekyll from compiling -->
 {% raw %}
 <script id="add-dog-template" type="text/x-handlebars-template">
-  <div class="animal-info js-have-dog-followup js-add-dog-form-block js-animal-info">
+  <div class="animal-info js-have-dog-followup js-add-dog-form-block js-animal-info form-group">
     <button type="button" class="close js-close-animal-info" aria-label="Close">
       <span aria-hidden="true">&times;</span>
     </button>
