--- a/_includes/add_explanation.html
+++ b/_includes/add_explanation.html
@@ -1,4 +1,4 @@
-<div class="js-add-explanation">
+<div class="js-add-explanation form-group">
   <span class="btn btn-sm btn-outline-primary js-add-explanation-trigger" role="button">+</span>
   <span>Add additional information</span>
   <small id="add_explanationHelpInline" class="text-muted">
