--- a/css/main.scss
+++ b/css/main.scss
@@ -70,14 +70,10 @@ span {
     padding-left: 30px;
     padding-bottom: 20px;
     padding-right: 30px;
-<<<<<<< HEAD:css/main.css
-    margin-top: 1rem;
-=======
-    margin: 10px 0;
+    margin: 1rem 0 0;
     .close {
       margin: 5px -20px;
     }
->>>>>>> origin/master:css/main.scss
 }
 
 .progress {
