more merge conflict

--- a/_includes/add_cat_info_form.html
+++ b/_includes/add_cat_info_form.html
@@ -8,13 +8,13 @@
     </button>
     <h5>(if yes to cats) Please fill in the information for Cat #{{ catNumber }}.</h5>
     <div class="form-row">
-      <div class="form-group">
+      <div class="form-group col-md-7">
         <label for="inputCat_name">Your cat's name</label>
         <input type="text" class="form-control" id="inputCat_name" placeholder=" " aria-describedby="Cat_nameHelpBlock">
       </div>
     </div>
     <div class="form-row">
-      <div class="form-group">
+      <div class="form-group col-md-2">
         <label for="inputCat_age">Your cat's age</label>
         <input type="number" class="form-control" id="inputCat_age" placeholder=" " aria-describedby="Cat_ageHelpBlock">
       </div>
