Added css class for add explanation block

--- a/css/main.scss
+++ b/css/main.scss
@@ -64,6 +64,10 @@ span {
     margin-top: 20px;
 }
 
+.add-explanation {
+    margin-top: 0px;
+}
+
 .animal-info {
     border-style: dotted;
     border-color: darkgrey;
