--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,5 +10,5 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="{{ '/css/main.css' | relative_url }}">
     <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
-    <link href="https://fonts.googleapis.com/css?family=Lora|Open+Sans" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lora:400,700|Open+Sans:400,600,700,800" rel="stylesheet">
 </head>
