Added icons to alerts for yourself_info

--- a/css/main.scss
+++ b/css/main.scss
@@ -99,7 +99,7 @@ span {
     color: #343a40;
 }
 
-.fa-exclamation-triangle {
+.fa-exclamation-triangle, .fa-times-circle, .fa-info-circle {
     padding: 0px;
 }
 
