Updated alerts, add animal buttons
Added icons and max width to rest of alerts. Made “add a dog/cat”
buttons match the “add information” buttons

--- a/_includes/add_cat_info_form.html
+++ b/_includes/add_cat_info_form.html
@@ -40,7 +40,7 @@
 <div id="js-new-cat"></div>
 
 <div class="d-none js-have-cat-followup">
-  <a class="btn btn-primary js-add-cat-trigger" href="#" role="button">+</a>
+  <a class="btn btn-sm btn-outline-primary js-add-cat-trigger" href="#" role="button">+</a>
   <span>Add another cat</span>
   <small id="add_CatHelpInline" class="text-muted">
     Optional
