--- a/_includes/add_dog_info_form.html
+++ b/_includes/add_dog_info_form.html
@@ -59,7 +59,7 @@
 <div id="js-new-dog"></div>
 
 <div class="js-have-dog-followup d-none">
-  <button class="btn btn-primary js-add-dog-trigger" href="#" role="button">+</button>
+  <button class="btn btn-sm btn-outline-primary js-add-dog-trigger" href="#" role="button">+</button>
   <span>Add another dog</span>
   <small id="add_dogHelpInline" class="text-muted">
     Optional
