--- a/css/main.scss
+++ b/css/main.scss
@@ -55,7 +55,7 @@ span {
     margin-bottom: .5rem;
 }
 
-.form-group, .form-check, .js-explanation-field, h1, h2, h3, h4, h5, p, li, span, small {
+.form-group, .form-check, .js-explanation-field, h1, h2, h3, h4, h5, p, li, span, small, .alert {
     max-width: 545px;
 }
 
