--- a/_includes/add_cat_info_form.html
+++ b/_includes/add_cat_info_form.html
@@ -14,9 +14,9 @@
       </div>
     </div>
     <div class="form-row">
-      <div class="form-group col-md-2">
+      <div class="form-group">
         <label for="inputCat_age">Your cat's age</label>
-        <input type="number" class="form-control" id="inputCat_age" placeholder=" " aria-describedby="Cat_ageHelpBlock">
+        <input type="number" class="form-control  col-md-4" id="inputCat_age" placeholder=" " aria-describedby="Cat_ageHelpBlock">
       </div>
     </div>
     <h5>Your cat's sex</h5>
