--- a/_includes/add_dog_info_form.html
+++ b/_includes/add_dog_info_form.html
@@ -14,9 +14,9 @@
       </div>
     </div>
     <div class="form-row">
-      <div class="form-group col-md-2">
+      <div class="form-group">
         <label for="inputDog_age">Your dog's age</label>
-        <input type="number" class="form-control" id="inputDog_age" placeholder=" " aria-describedby="Dog_ageHelpBlock">
+        <input type="number" class="form-control col-md-4" id="inputDog_age" placeholder=" " aria-describedby="Dog_ageHelpBlock">
       </div>
     </div>
     <h5>Your dog's weight</h5>
