Changed span to label to pass WAVE

--- a/_includes/add_explanation.html
+++ b/_includes/add_explanation.html
@@ -1,6 +1,6 @@
 <div class="js-add-explanation form-group add-explanation">
   <span class="btn btn-sm btn-outline-primary js-add-explanation-trigger" role="button">+</span>
-  <span>Add additional information</span>
+  <label>Add additional information</label>
   <small id="add_explanationHelpInline" class="text-muted">
     Optional
   </small>
