Remove accidentally shown text

--- a/_includes/add_cat_info_form.html
+++ b/_includes/add_cat_info_form.html
@@ -6,7 +6,7 @@
     <button type="button" class="close js-close-animal-info" aria-label="Close">
       <span aria-hidden="true">&times;</span>
     </button>
-    <h5>(if yes to cats) Please fill in the information for Cat #{{ catNumber }}.</h5>
+    <h5>Please fill in the information for Cat #{{ catNumber }}.</h5>
     <div class="form-row">
       <div class="form-group col-md-7">
         <label for="inputCat_name">Your cat's name</label>
