Add ARIA label to add explanation button

--- a/_includes/add_explanation.html
+++ b/_includes/add_explanation.html
@@ -1,5 +1,5 @@
 <div class="js-add-explanation form-group add-explanation">
-  <span class="btn btn-sm btn-outline-primary js-add-explanation-trigger" role="button">+</span>
+  <span class="btn btn-sm btn-outline-primary js-add-explanation-trigger" role="button" aria-labelledby="Add additional information">+</span>
   <label for="inputAdd-explanation">Add additional information</label>
   <small id="add_explanationHelpInline" class="text-muted">
     Optional
