Update ARIA label for add additional info

--- a/_includes/add_explanation.html
+++ b/_includes/add_explanation.html
@@ -1,6 +1,6 @@
 <div class="js-add-explanation form-group add-explanation">
-  <span class="btn btn-sm btn-outline-primary js-add-explanation-trigger" role="button" aria-labelledby="Add additional information">+</span>
-  <label for="inputAdd-explanation">Add additional information</label>
+  <span class="btn btn-sm btn-outline-primary js-add-explanation-trigger" role="button" aria-labelledby="additional_info">+</span>
+  <label id="additional_info" for="inputAdd-explanation">Add additional information</label>
   <small id="add_explanationHelpInline" class="text-muted">
     Optional
   </small>
