Added ARIA labels to dog and cat info conditionals

--- a/_includes/add_cat_info_form.html
+++ b/_includes/add_cat_info_form.html
@@ -40,8 +40,8 @@
 <div id="js-new-cat"></div>
 
 <div class="d-none js-have-cat-followup">
-  <a class="btn btn-sm btn-outline-primary js-add-cat-trigger" href="#" role="button">+</a>
-  <span>Add another cat</span>
+  <a class="btn btn-sm btn-outline-primary js-add-cat-trigger" aria-labelledby="add_cat" href="#" role="button">+</a>
+  <span id="add_cat">Add another cat</span>
   <small id="add_CatHelpInline" class="text-muted">
     Optional
   </small>
