--- a/_includes/add_dog_info_form.html
+++ b/_includes/add_dog_info_form.html
@@ -33,8 +33,8 @@
       </label>
     </div>
     <div class="form-check">
-      <input class="form-check-input" type="radio" name="Dog_weightRadios" id="Dog_weightRadios2" value="Large (65 lbs and higher)">
-      <label class="form-check-label" for="Dog_weightRadios2">
+      <input class="form-check-input" type="radio" name="Dog_weightRadios" id="Dog_weightRadios3" value="Large (65 lbs and higher)">
+      <label class="form-check-label" for="Dog_weightRadios3">
       Large (40 lbs and higher)
       </label>
     </div>
@@ -59,8 +59,8 @@
 <div id="js-new-dog"></div>
 
 <div class="js-have-dog-followup d-none">
-  <button class="btn btn-sm btn-outline-primary js-add-dog-trigger" href="#" role="button">+</button>
-  <span>Add another dog</span>
+  <button class="btn btn-sm btn-outline-primary js-add-dog-trigger" aria-labelledby="add_dog" href="#" role="button">+</button>
+  <span id="add_dog">Add another dog</span>
   <small id="add_dogHelpInline" class="text-muted">
     Optional
   </small>
