--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,6 +1,6 @@
 <head>
     <meta charset="utf-8">
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>{{ site.title }}</title>
     <meta name="description" content="Design, technology, and innovation fellowship project to redesign the Austin Animal Center Foster Application">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
